[gd_scene load_steps=12 format=2]

[ext_resource path="res://Characters/DaAdult (Old)/boss.png" type="Texture" id=1]
[ext_resource path="res://Characters/Hitboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/DaAdult (Old)/daadult.gd" type="Script" id=3]
[ext_resource path="res://Characters/Hitboxes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=2]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "prime_finished"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 59.0762

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 18 )

[sub_resource type="RectangleShape2D" id=7]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
self_modulate = Color( 1, 1, 1, 0.219608 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Priming = SubResource( 3 )
anims/Shoot = SubResource( 4 )

[node name="Detection" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Detection" index="0"]
self_modulate = Color( 1, 1, 1, 0.317647 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
self_modulate = Color( 0.721569, 0.0862745, 0.0862745, 1 )
shape = SubResource( 6 )

[node name="StopShooting" type="Timer" parent="."]
wait_time = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[connection signal="area_entered" from="Detection" to="." method="_on_Detection_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="StopShooting" to="." method="_on_StopShooting_timeout"]

[editable path="Hitbox"]
[editable path="Detection"]
[editable path="Hurtbox"]
